# template_project_cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
inc/: adc.hpp
src/: CMakeLists.txt  adc.cpp  main.cpp
